<resources>
    <string name="app_name">IMEDIG Móvil</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Identificarse</string>
    <string name="action_sign_in_short">Identificarse</string>
    <string name="error_incorrect_password">Credenciales de autorización inválidas</string>
    <string name="error_field_required">Dato requerido</string>
    <string name="error_unknown">Error desconocido</string>
    <string name="settings">Configuración</string>
    <string name="error_user_not_authorized">Usuario no autorizado.</string>
    <string name="reports">Informes.</string>
    <string name="back">Atrás</string>
    <string name="info">Mostrar</string>
    <string name="search">Buscar</string>
    <string name="remember_login">Recordarme</string>
    <string name="exit">Salir</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="title_activity_reports">Buscar informes</string>
    <string name="confirmation">Confirmar</string>
    <string name="exit_confirmation">¿Seguro desea salir de la Aplicación?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="failure">Error</string>
    <string name="ok">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="patient">Paciente</string>
    <string name="error_patient">Debe especificar nombre o identificador de paciente</string>
    <string name="error_query_reports">Error en la búsqueda de informes</string>
    <string name="reports_not_found">No se encontraron informes</string>

</resources>
